--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "dayjs": "^1.8.29"
+    "dayjs": "^1.8.29",
+    "marked": "^1.1.0"
   }
 }
