fixed on-tag notification action

--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -31,3 +31,4 @@ jobs:
         env:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CICD_CHANNEL_ID: ${{ secrets.TG_CICD_CHANNEL_ID }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
